@@ -3,6 +3,7 @@ Version 0.2.6
 
 - autoconf: fixed dependencies support for traditional Unix compilers.
 - autoconf: correct shared library extension under HP-UX ia64.
+- autoconf: added support for new (10 and 11) Intel C/C++ compiler versions.
 
 Version 0.2.5
 -------------
